# RAG-Anything

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  GEMINI.md  Makefile  README.md  docker-compose.yml  env.example  pyproject.toml
.github/: copilot-instructions.md
api/: README.md  __init__.py  app.py  core.py  core_endpoint_test.py  models.py  routes.py  utils.py
api/datasets/: README.md  generate_datasets.py  medical_abstracts_medium.csv  medical_symptoms_small.xlsx  patient_records_small.xlsx
api/datasets/examples/: analysis_demo.py  load_datasets.py  rag_integration.py
docs/: offline_setup.md
examples/: excel_integration_example.py  lmstudio_integration_example.py  raganything_example.py
raganything/: excel_processor.py  modalprocessors.py  processor.py  query.py  raganything.py
service/: README.md  core.py  models.py  routes.py
service/datasets/: clinical_trials_medium.csv
service/datasets/examples/: analysis_demo.py  load_datasets.py
ui/: README.md  streamlit_app.py
ui/.streamlit/: config.toml
